# clingo-debug-gui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  doc_01.txt  first_build.py
cmake/: README.md
doc/: Doxyfile.in
docs/: README.md
include/: AFrame.h  Edge.h  GraphPane.h  MainWindow.h  Node.h  README.md  config.h.in
include/clingo-debug-gui/: Graph.h  GraphPane.h  MainFrame.h  MainWindow.h  Node.h  README.md
scripts/: README.md
src/: AFrame.cpp  GraphPane.cpp  MainFrame.cpp  MainWindow.cpp  README.md  appmain.cpp  main.cpp  minimal.cpp
tests/: README.md
